fixed responsive height on mobile menu

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@
 	  }
 	  &.dim {
 		overflow: hidden;
+		height: 100%;
 		&::after{
 		  left: 0;
 		  
